# Sc2-Bot

./: .auditignore  .gitattributes  .gitignore  Build.bat  BuildAllTests.bat  BuildSingularity.bat  CMakeLists.txt  CodexCommand.bat  CodingStandards.md  DiagnoseSc2Startup.bat  DiagnoseSc2Startup.py  EnsureSc2Path.bat  HowToBuild.txt  LaunchTerranEasyComputerMatch.bat  LaunchTerranMirrorMatch.bat  RESUME.md  RunSc2TestWithWatchdog.py  RunTests.bat
examples/common/: CMakeLists.txt  agent_framework.h  bot_status_models.h  economic_models.h  logging.h  render_settings.h  terran_models.h  terran_unit_container.h
examples/common/armies/: EArmyGoal.cc  EArmyGoal.h  EArmyMissionType.cc  EArmyMissionType.h  EArmyPosture.cc  EArmyPosture.h  FArmyDomainState.cc  FArmyDomainState.h  FArmyMissionDescriptor.cc  FArmyMissionDescriptor.h
examples/common/build_orders/: FOpeningPlanRegistry.cc  FOpeningPlanStep.cc  FOpeningPlanStep.h
examples/common/catalogs/: EGoalActivationRuleId.h  EGoalTargetRuleId.h  ETerranGoalDefinitionId.h  ETerranTaskTemplateId.h  FMapLayoutDictionary.cc  FMapLayoutDictionary.h  FMapLayoutTypes.h  FMapQueryHelper.cc  FMapQueryHelper.h  FTerranGoalDefinition.cc  FTerranGoalDefinition.h  FTerranGoalDictionary.cc  FTerranGoalDictionary.h  FTerranGoalRuleLibrary.cc  FTerranGoalRuleLibrary.h  FTerranTaskTemplateDefinition.cc  FTerranTaskTemplateDefinition.h  FTerranTaskTemplateDictionary.cc  FTerranTaskTemplateDictionary.h
examples/common/descriptors/: EGamePlan.cc  EGamePlan.h  EMacroPhase.cc  EMacroPhase.h  EObservedWallSlotState.cc  EObservedWallSlotState.h  EProductionFocus.cc  EProductionFocus.h  FEconomicCommitmentLedgerDescriptor.cc  FEconomicCommitmentLedgerDescriptor.h  FEconomyStateDescriptor.cc  FEconomyStateDescriptor.h  FEnemyObservationDescriptor.cc  FEnemyObservationDescriptor.h  FExecutionPressureDescriptor.cc  FExecutionPressureDescriptor.h  FGameStateDescriptor.cc  FGameStateDescriptor.h  FMacroStateDescriptor.cc  FMacroStateDescriptor.h  FObservedPlacementSlotState.cc  FObservedPlacementSlotState.h  FObservedRampWallState.cc  FObservedRampWallState.h  FProductionStateDescriptor.cc  FProductionStateDescriptor.h  FSchedulerOutlookDescriptor.cc  FSchedulerOutlookDescriptor.h  FTerranEnemyObservationBuilder.cc  FTerranEnemyObservationBuilder.h  FTerranForecastStateBuilder.cc  FTerranForecastStateBuilder.h  FTerranGameStateDescriptorBuilder.cc  FTerranGameStateDescriptorBuilder.h  IEnemyObservationBuilder.h  IGameStateDescriptorBuilder.cc  IGameStateDescriptorBuilder.h
examples/common/economy/: EconomyForecastConstants.h  FEconomyDomainState.cc  FEconomyDomainState.h
examples/common/goals/: EGoalDomain.cc  EGoalDomain.h  EGoalHorizon.cc  EGoalHorizon.h  EGoalStatus.cc  EGoalStatus.h  EGoalType.cc  EGoalType.h  FAgentGoalSetDescriptor.cc  FAgentGoalSetDescriptor.h  FGoalDescriptor.cc  FGoalDescriptor.h
examples/common/planning/: EBlockedTaskWakeKind.cc  EBlockedTaskWakeKind.h  ECommandAuthorityLayer.cc  ECommandAuthorityLayer.h  ECommandCommitmentClass.cc  ECommandCommitmentClass.h  ECommandOrderDeferralReason.cc  ECommandOrderDeferralReason.h  ECommandPriorityTier.cc  ECommandPriorityTier.h  ECommandTaskExecutionGuarantee.cc  ECommandTaskExecutionGuarantee.h  ECommandTaskOrigin.cc  ECommandTaskOrigin.h  ECommandTaskRetentionPolicy.cc  ECommandTaskRetentionPolicy.h  ECommandTaskType.cc  ECommandTaskType.h  EIntentDomain.cc  EIntentDomain.h  EIntentPlaybackState.cc  EIntentPlaybackState.h  EOrderLifecycleState.cc  EOrderLifecycleState.h  EPlanningProcessorState.cc  EPlanningProcessorState.h  EProductionBlockerKind.cc  EProductionBlockerKind.h  EProductionRallyApplyState.cc  EProductionRallyApplyState.h  EUnitTacticalBehavior.cc  EUnitTacticalBehavior.h  EWallGateState.cc  EWallGateState.h  FBlockedTaskRecord.cc  FBlockedTaskRecord.h  FBlockedTaskRingBuffer.cc  FBlockedTaskRingBuffer.h  FCommandAuthorityProcessor.cc  FCommandAuthorityProcessor.h  (+61 more)
examples/common/services/: EBuildPlacementFootprintPolicy.cc  EBuildPlacementFootprintPolicy.h  EBuildPlacementSlotType.cc  EBuildPlacementSlotType.h  FBuildPlacementContext.cc  FBuildPlacementContext.h  FBuildPlacementSlot.cc  FBuildPlacementSlot.h  FBuildPlacementSlotId.cc  FBuildPlacementSlotId.h  FMainBaseLayoutDescriptor.cc  FMainBaseLayoutDescriptor.h  FRampOrientationConstants.h  FRampWallDescriptor.cc  FRampWallDescriptor.h  FTerranBuildPlacementService.cc  FTerranBuildPlacementService.h  FTerranEconomicService.cc  FTerranEconomicService.h  FTerranMainBaseLayoutRegistry.cc  FTerranMainBaseLayoutRegistry.h  FTerranWorkerSelectionService.cc  FTerranWorkerSelectionService.h  IBuildPlacementService.cc  IBuildPlacementService.h  IEconomicService.h  IExpansionSelectionService.cc  IExpansionSelectionService.h  ISpatialFieldBuilder.cc  ISpatialFieldBuilder.h  IWorkerSelectionService.h
examples/common/spatial/: FSpatialFieldSet.cc  FSpatialFieldSet.h
tests/: CMakeLists.txt  FTestUnitFactory.h  all_tests.cc  test_ability_remap.cc  test_agent_execution_telemetry.cc  test_agent_execution_telemetry.h  test_command_authority_scheduling.cc  test_command_authority_scheduling.h  test_framework.cc  test_map_paths.cc  test_map_paths.h  test_scheduler_hot_path_profiles.cc  test_scheduler_hot_path_profiles.h  test_singularity_framework.cc  test_singularity_framework.h  test_terran_army_order_pipeline.cc  test_terran_army_order_pipeline.h  test_terran_bot_scaffolding.cc  test_terran_bot_scaffolding.h  test_terran_build_placement_service.cc  test_terran_build_placement_service.h  test_terran_descriptor_pipeline.cc  test_terran_descriptor_pipeline.h  test_terran_economic_models.cc  test_terran_economic_models.h  test_terran_economy_production_order_expander.cc  test_terran_economy_production_order_expander.h  test_terran_goal_task_dictionary.cc  test_terran_goal_task_dictionary.h  test_terran_opening_plan_scheduler.cc  test_terran_opening_plan_scheduler.h  test_terran_planners.cc  test_terran_planners.h  test_terran_ramp_wall_controller.cc  test_terran_ramp_wall_controller.h  test_unit_command.cc  test_unit_command_common.cc
(+54 files in other folders)
