set(sc2_terran_bot_common_sources
    armies/EArmyGoal.cc
    armies/EArmyPosture.cc
    armies/FArmyDomainState.cc
    build_orders/EOpeningPlanId.cc
    build_orders/EOpeningPlanLifecycleState.cc
    build_orders/FOpeningPlanDescriptor.cc
    build_orders/FOpeningPlanExecutionState.cc
    build_orders/FOpeningPlanGoals.cc
    build_orders/FOpeningPlanRegistry.cc
    build_orders/FOpeningPlanStep.cc
    build_planning/FBuildPlanningState.cc
    descriptors/EObservedWallSlotState.cc
    descriptors/EGamePlan.cc
    descriptors/FObservedRampWallState.cc
    descriptors/EMacroPhase.cc
    descriptors/FTerranGameStateDescriptorBuilder.cc
    descriptors/FGameStateDescriptor.cc
    descriptors/FMacroStateDescriptor.cc
    descriptors/IGameStateDescriptorBuilder.cc
    planning/ECommandAuthorityLayer.cc
    planning/ECommandOrderDeferralReason.cc
    planning/EIntentDomain.cc
    planning/EIntentPlaybackState.cc
    planning/EOrderLifecycleState.cc
    planning/EPlanningProcessorState.cc
    planning/EWallGateState.cc
    planning/FCommandAuthoritySchedulingState.cc
    planning/FCommandAuthorityProcessor.cc
    planning/FDefaultStrategicDirector.cc
    planning/FCommandOrderRecord.cc
    planning/FTerranRampWallController.cc
    planning/FTerranEconomyProductionOrderExpander.cc
    planning/FTerranArmyPlanner.cc
    planning/FTerranTimingAttackBuildPlanner.cc
    planning/IArmyPlanner.cc
    planning/IArmyOrderExpander.cc
    planning/IBuildPlanner.cc
    planning/IEconomyProductionOrderExpander.cc
    planning/FIntentSchedulingService.cc
    planning/IIntentSchedulingService.cc
    planning/ISquadOrderExpander.cc
    planning/IStrategicDirector.cc
    planning/IWallGateController.cc
    planning/IUnitExecutionPlanner.cc
    telemetry/EAgentExecutionEventType.cc
    telemetry/EExecutionConditionState.cc
    telemetry/FAgentExecutionTelemetry.cc
    telemetry/FExecutionEventRecord.cc
    services/EBuildPlacementFootprintPolicy.cc
    services/EBuildPlacementSlotType.cc
    services/FBuildPlacementContext.cc
    services/FBuildPlacementSlot.cc
    services/FBuildPlacementSlotId.cc
    services/FRampWallDescriptor.cc
    services/FTerranBuildPlacementService.cc
    services/IBuildPlacementService.cc
    services/IExpansionSelectionService.cc
    services/ISpatialFieldBuilder.cc
    spatial/FSpatialFieldSet.cc)

add_library(sc2_terran_bot_common STATIC ${sc2_terran_bot_common_sources})

target_include_directories(sc2_terran_bot_common
    PUBLIC
        "${PROJECT_SOURCE_DIR}/examples")

target_link_libraries(sc2_terran_bot_common
    PUBLIC
        cpp_sc2)

set_target_properties(sc2_terran_bot_common PROPERTIES FOLDER examples)
