set(sc2_terran_bot_common_sources
    armies/EArmyGoal.cc
    armies/EArmyMissionType.cc
    armies/EArmyPosture.cc
    armies/FArmyDomainState.cc
    armies/FArmyMissionDescriptor.cc
    catalogs/FTerranGoalDefinition.cc
    catalogs/FTerranGoalDictionary.cc
    catalogs/FTerranGoalRuleLibrary.cc
    catalogs/FTerranTaskTemplateDefinition.cc
    catalogs/FTerranTaskTemplateDictionary.cc
    catalogs/generated/FTerranGoalDictionaryData.generated.cc
    catalogs/generated/FTerranTaskTemplateDictionaryData.generated.cc
    build_orders/EOpeningPlanId.cc
    build_orders/EOpeningPlanLifecycleState.cc
    build_orders/EOpeningWallChainState.cc
    build_orders/FOpeningPlanDescriptor.cc
    build_orders/FOpeningPlanExecutionState.cc
    build_orders/FOpeningPlanGoals.cc
    build_orders/FOpeningPlanRegistry.cc
    build_orders/FOpeningPlanStep.cc
    build_planning/FBuildPlanningState.cc
    economy/FEconomyDomainState.cc
    descriptors/EObservedWallSlotState.cc
    descriptors/EGamePlan.cc
    descriptors/EProductionFocus.cc
    descriptors/FEconomicCommitmentLedgerDescriptor.cc
    descriptors/FEconomyStateDescriptor.cc
    descriptors/FExecutionPressureDescriptor.cc
    descriptors/FObservedPlacementSlotState.cc
    descriptors/FObservedRampWallState.cc
    descriptors/FProductionStateDescriptor.cc
    descriptors/FSchedulerOutlookDescriptor.cc
    descriptors/EMacroPhase.cc
    descriptors/FTerranForecastStateBuilder.cc
    descriptors/FTerranGameStateDescriptorBuilder.cc
    descriptors/FGameStateDescriptor.cc
    descriptors/FMacroStateDescriptor.cc
    goals/EGoalDomain.cc
    goals/EGoalHorizon.cc
    goals/EGoalStatus.cc
    goals/EGoalType.cc
    goals/FAgentGoalSetDescriptor.cc
    goals/FGoalDescriptor.cc
    descriptors/IGameStateDescriptorBuilder.cc
    planning/ECommandAuthorityLayer.cc
    planning/ECommandCommitmentClass.cc
    planning/ECommandTaskOrigin.cc
    planning/ECommandTaskExecutionGuarantee.cc
    planning/ECommandTaskRetentionPolicy.cc
    planning/ECommandPriorityTier.cc
    planning/EBlockedTaskWakeKind.cc
    planning/ECommandOrderDeferralReason.cc
    planning/ECommandTaskType.cc
    planning/EIntentDomain.cc
    planning/EIntentPlaybackState.cc
    planning/EProductionBlockerKind.cc
    planning/EUnitTacticalBehavior.cc
    planning/EOrderLifecycleState.cc
    planning/EPlanningProcessorState.cc
    planning/EProductionRallyApplyState.cc
    planning/EWallGateState.cc
    planning/FCommandTaskDescriptor.cc
    planning/FCommandTaskSignatureKey.cc
    planning/FBlockedTaskRecord.cc
    planning/FBlockedTaskRingBuffer.cc
    planning/FCommandAuthoritySchedulingState.cc
    planning/FCommandAuthorityProcessor.cc
    planning/FDefaultStrategicDirector.cc
    planning/FCommandOrderRecord.cc
    planning/FProductionBlockerResolution.cc
    planning/FProductionRallyState.cc
    planning/FSchedulerStimulusState.cc
    planning/FTacticalBehaviorScore.cc
    planning/FTerranArmyOrderExpander.cc
    planning/FTerranArmyUnitExecutionPlanner.cc
    planning/FTerranCommandTaskAdmissionService.cc
    planning/FTerranCommandTaskPriorityService.cc
    planning/FTerranRampWallController.cc
    planning/FTerranEconomyProductionOrderExpander.cc
    planning/FTerranArmyPlanner.cc
    planning/FTerranSquadOrderExpander.cc
    planning/FTerranTimingAttackBuildPlanner.cc
    planning/FUnitExecutionCacheEntry.cc
    planning/IArmyPlanner.cc
    planning/IArmyOrderExpander.cc
    planning/IBuildPlanner.cc
    planning/ICommandTaskPriorityService.cc
    planning/IEconomyProductionOrderExpander.cc
    planning/FIntentSchedulingService.cc
    planning/IIntentSchedulingService.cc
    planning/ISquadOrderExpander.cc
    planning/IStrategicDirector.cc
    planning/IWallGateController.cc
    planning/IUnitExecutionPlanner.cc
    telemetry/EAgentExecutionEventType.cc
    telemetry/EExecutionConditionState.cc
    telemetry/FAgentExecutionTelemetry.cc
    telemetry/FExecutionEventRecord.cc
    services/EBuildPlacementFootprintPolicy.cc
    services/EBuildPlacementSlotType.cc
    services/FBuildPlacementContext.cc
    services/FMainBaseLayoutDescriptor.cc
    services/FBuildPlacementSlot.cc
    services/FBuildPlacementSlotId.cc
    services/FRampWallDescriptor.cc
    services/FTerranMainBaseLayoutRegistry.cc
    services/FTerranBuildPlacementService.cc
    services/FTerranEconomicService.cc
    services/FTerranWorkerSelectionService.cc
    services/IBuildPlacementService.cc
    services/IExpansionSelectionService.cc
    services/ISpatialFieldBuilder.cc
    descriptors/FEnemyObservationDescriptor.cc
    descriptors/FTerranEnemyObservationBuilder.cc
    spatial/FSpatialFieldSet.cc)

add_library(sc2_terran_bot_common STATIC ${sc2_terran_bot_common_sources})

target_include_directories(sc2_terran_bot_common
    PUBLIC
        "${PROJECT_SOURCE_DIR}/examples")

target_link_libraries(sc2_terran_bot_common
    PUBLIC
        cpp_sc2)

set_target_properties(sc2_terran_bot_common PROPERTIES FOLDER examples)
